--- a/deploy/local/docker-compose.local.yaml
+++ b/deploy/local/docker-compose.local.yaml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   db:
+    hostname: postgres
     image: postgres
     networks:
       new:
@@ -39,11 +40,12 @@ services:
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
       - pgadmin:/var/lib/pgadmin
+    depends_on:
+      db:
+        condition: service_healthy
 
     ports:
       - "${PGADMIN_PORT:-5050}:80"
-    depends_on:
-      - db
     networks:
       - new
     restart: unless-stopped
@@ -52,7 +54,10 @@ services:
       context: ../../
       dockerfile: ./deploy/local/Dockerfile.local
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    networks:
+      - new
     ports:
       - "8080:8080"
 networks:
